# img_edit

flutter_edit_img_sdk/: README.md  pubspec.yaml
flutter_edit_img_sdk/android/: CMakeLists.txt  build.gradle  settings.gradle
flutter_edit_img_sdk/android/src/main/: AndroidManifest.xml
flutter_edit_img_sdk/android/src/main/cpp/: android_utils.cpp  smart_cropper.cpp
flutter_edit_img_sdk/android/src/main/cpp/include/: android_utils.h
flutter_edit_img_sdk/android/src/main/java/com/example/flutter_edit_img_sdk/: FlutterEditImgSdkPlugin.java
flutter_edit_img_sdk/example/: README.md  pubspec.yaml
flutter_edit_img_sdk/example/android/app/: build.gradle
flutter_edit_img_sdk/example/ios/Runner/: Info.plist
flutter_edit_img_sdk/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_edit_img_sdk/example/lib/: main.dart
flutter_edit_img_sdk/example/lib/page/: img_edit.dart
flutter_edit_img_sdk/example/lib/view/: black_title_bar.dart  common_widget.dart
flutter_edit_img_sdk/example/pub/camera/android/: local.properties
flutter_edit_img_sdk/example/pub/camera/lib/: camera.dart
flutter_edit_img_sdk/ios/: flutter_edit_img_sdk.podspec
flutter_edit_img_sdk/ios/Classes/: FlutterEditImgSdkPlugin.h  FlutterEditImgSdkPlugin.m  SwiftFlutterEditImgSdkPlugin.swift  native_add.cpp
flutter_edit_img_sdk/lib/: flutter_edit_img_sdk.dart
flutter_edit_img_sdk/lib/img_edit_sdk/: extended_image.dart  extended_image_typedef.dart  global_variables.dart
flutter_edit_img_sdk/lib/img_edit_sdk/editor/: extended_image_crop_layer.dart  extended_image_editor.dart  extended_image_editor_utils.dart
flutter_edit_img_sdk/lib/img_edit_sdk/gesture/: extended_image_gesture.dart  extended_image_gesture_page_view.dart  extended_image_gesture_utils.dart  extended_image_slide_page_handler.dart  extended_image_slide_page_route.dart
flutter_edit_img_sdk/lib/img_edit_sdk/image/: crop_editor_helper.dart  extended_raw_image.dart  extended_render_image.dart
flutter_edit_img_sdk/lib/img_edit_sdk/image_cover/: extended_image_cover_utils.dart  onpan_callback.dart
flutter_edit_img_sdk/lib/img_edit_sdk/image_cover/core/: touchable_container.dart
flutter_edit_img_sdk/lib/img_edit_sdk/img_edit/: image_crop.dart  img_cover.dart
flutter_edit_img_sdk/lib/img_edit_sdk/img_edit/core/: drag_scale_widget.dart  (+1 more)
flutter_edit_img_sdk/lib/img_edit_sdk/opencv/: crop_util.dart  native_with_opencv.dart
flutter_edit_img_sdk/lib/img_edit_sdk/utils/: color_utils.dart  common_utils.dart  custom_loading_dialog.dart  dimen_utils.dart  extended_image_utils.dart  file_utils.dart  toast_utils.dart
(+10 files in other folders)
